# TradeTracker

./: .gitignore  CMakeLists.txt  IB-Tracker.sln  IB-Tracker.vcxproj  IB-Tracker.vcxproj.filters  LICENSE  LICENSE.txt  README.md  TradeTracker.sln  cmake_build.bat  cmake_build.sh
IB-Tracker/: IB-Tracker.rc  IB-Tracker.vcxproj  IB-Tracker.vcxproj.filters  ibtracker_version.txt  manifest.xml  resource.h
IB-Tracker/src/: codetimer.h  main.cpp  pch.h
IB-Tracker/src/ActiveTrades/: ActiveTrades.cpp  ActiveTrades.h
IB-Tracker/src/Category/: Category.cpp  Category.h  CategoryDialog.cpp  CategoryDialog.h  CategoryPopup.cpp  CategoryPopup.h
IB-Tracker/src/ClosedPanel/: ClosedPanel.cpp  ClosedPanel.h
IB-Tracker/src/ClosedTrades/: ClosedTrades.cpp  ClosedTrades.h
IB-Tracker/src/Config/: Config.cpp  Config.h
IB-Tracker/src/ConfigDialog/: ConfigDialog.cpp  ConfigDialog.h
IB-Tracker/src/CustomCalendar/: CustomCalendar.cpp  CustomCalendar.h
IB-Tracker/src/CustomCombo/: CustomComboPopup.cpp  CustomComboPopup.h
IB-Tracker/src/CustomLabel/: CustomLabel.cpp  CustomLabel.h
IB-Tracker/src/CustomTextBox/: CustomTextBox.cpp  CustomTextBox.h
IB-Tracker/src/CustomTradeGrid/: CustomTradeGrid.cpp  CustomTradeGrid.h
IB-Tracker/src/CustomVScrollBar/: CustomVScrollBar.cpp  CustomVScrollBar.h
IB-Tracker/src/DailyPanel/: DailyPanel.cpp  DailyPanel.h
IB-Tracker/src/DailyTotals/: DailyTotals.cpp  DailyTotals.h
IB-Tracker/src/Database/: database.cpp  database.h  trade.cpp  trade.h
IB-Tracker/src/DatePicker/: Calendar.cpp  Calendar.h  DatePicker.cpp  DatePicker.h
IB-Tracker/src/HistoryPanel/: HistoryPanel.cpp  HistoryPanel.h
IB-Tracker/src/JournalNotes/: JournalNotes.cpp
IB-Tracker/src/MainWindow/: MainWindow.cpp  MainWindow.h  tws-client.cpp  tws-client.h
IB-Tracker/src/MenuPanel/: MenuPanel.cpp  MenuPanel.h
IB-Tracker/src/MyNotes/: MyNotes.cpp  MyNotes.h
IB-Tracker/src/NavPanel/: NavPanel.cpp  NavPanel.h
IB-Tracker/src/Reconcile/: Reconcile.cpp  Reconcile.h
IB-Tracker/src/SideMenu/: SideMenu.cpp  SideMenu.h
IB-Tracker/src/Strategies/: StrategyButton.cpp  StrategyButton.h
IB-Tracker/src/Strategy/: StrategyButton.cpp  StrategyButton.h  StrategyPopup.cpp  StrategyPopup.h
IB-Tracker/src/SuperLabel/: SuperLabel.cpp  SuperLabel.h
IB-Tracker/src/TabPanel/: TabPanel.cpp  TabPanel.h
IB-Tracker/src/Templates/: Templates.cpp  Templates.h
IB-Tracker/src/Themes/: Theme-Blue.cpp  Theme-Dark.cpp  Theme-DarkPlus.cpp  Theme-Light.cpp  Themes.cpp  Themes.h
IB-Tracker/src/TickerPanel/: TickerPanel.cpp  TickerPanel.h
IB-Tracker/src/TickerTotals/: TickerTotals.cpp  TickerTotals.h
IB-Tracker/src/TradeDialog/: TradeDialog.cpp  TradeDialog.h  TradeDialogControls.cpp  TradeDialogControls.h  TradeDialogSave.cpp  TradeDialogSave.h
IB-Tracker/src/TradeGrid/: TradeGrid.cpp  TradeGrid.h
IB-Tracker/src/TradeHistory/: TradeHistory.cpp  TradeHistory.h
IB-Tracker/src/TradePlan/: TradePlan.cpp  TradePlan.h
IB-Tracker/src/TradesPanel/: TradesPanel.cpp  TradesPanel.h
IB-Tracker/src/TransPanel/: TransDateFilter.cpp  TransDateFilter.h  TransDetail.cpp  TransDetail.h  TransPanel.cpp  TransPanel.h
IB-Tracker/src/Transactions/: TransDateFilter.cpp  TransDateFilter.h  TransDetail.cpp  TransDetail.h  TransPanel.cpp  TransPanel.h
IB-Tracker/src/Utilities/: AfxWin.cpp  AfxWin.h  CWindow.cpp  CWindow.h  CWindowBase.h  Colors.h  IntelDecimal.cpp  IntelDecimal.h  ListBoxData.cpp  ListBoxData.h  SuperLabel.cpp  SuperLabel.h  UpdateCheck.cpp  UpdateCheck.h  UserMessages.h  decimal.h
IB-Tracker/src/VScrollBar/: VScrollBar.cpp  VScrollBar.h
IB-Tracker/src/YearEndDialog/: YearEndDialog.cpp  YearEndDialog.h
IB-Tracker/src/tws-api/: CommonDefs.h  Decimal.h  DefaultEWrapper.cpp  EClient.cpp  EClient.h  EDecoder.cpp  EDecoder.h  EOrderDecoder.cpp  EReader.cpp  ESocket.cpp  EWrapper.h  EWrapper_prototypes.h  Execution.h  HistoricalSession.h  MarginCondition.cpp  OperatorCondition.cpp  Order.h  PercentChangeCondition.cpp  SoftDollarTier.cpp  TwsWrapper.cpp  TwsWrapper.h  Utils.cpp  VolumeCondition.cpp  framework.h
IB-Tracker/src/tws_gui/: CWindow.cpp  CWindow.h  HistoryPanel.cpp  HistoryPanel.h  NavPanel.cpp  NavPanel.h  SuperLabel.cpp  SuperLabel.h  Theme-Blue.cpp  Theme-Dark.cpp  Theme-DarkPlus.cpp  Theme-Light.cpp  Themes.cpp  Themes.h  TradesPanel.cpp  TradesPanel.h  UserMessages.h  database.cpp  database.h  ib-tracker.cpp  ib-tracker.h  pch.h  trade.cpp  trade.h  tws-client.cpp  tws-client.h
TradeTracker/: TradeTracker.rc  TradeTracker.vcxproj  manifest.xml  resource.h
TradeTracker/src/: main.cpp  main.h  pch.h
TradeTracker/src/ActiveTrades/: ActiveTrades.cpp  ActiveTrades.h  Assignment.cpp  Assignment.h
TradeTracker/src/Category/: Category.cpp  Category.h  CategoryDialog.cpp  CategoryDialog.h  CategoryPopup.h  (+1 more)
archive_win32_version/: README.md
archive_win32_version/TradeTracker/: TradeTracker.vcxproj  manifest.xml  resource.h
src/: _TODO.txt  active_trades.cpp  active_trades.h  active_trades_actions.cpp  active_trades_actions.h  app_apple.h  app_base_apple.h  app_base_linux.h  app_base_win32.h  app_linux.h  app_win32.h  appstate.h  assignment.cpp  assignment.h  categories.cpp  categories.h  closed_trades.cpp  closed_trades.h  colors.cpp  config.cpp  database.cpp  filter_panel.cpp  filter_panel.h  icons_material_design.h  import_dialog.cpp  import_dialog.h  journal_notes.cpp  journal_notes.h  list_panel.cpp  list_panel.h  list_panel_data.cpp  list_panel_data.h  main.cpp  main_window.cpp  main_window.h  messagebox.cpp  messagebox.h  questionbox.cpp  questionbox.h  reconcile.cpp  (+26 more)
src/resources/: LICENSE.rtf  LICENSE.txt  TradeTracker.aip  TradeTracker.exe.manifest  TradeTracker.rc  mainicon.icns
src/tws-api/: Contract.h  ContractCondition.cpp  Decimal.h  DefaultEWrapper.cpp  EClient.cpp  EClientSocket.cpp  EMessage.cpp  EReaderOSSignal.cpp  ESocket.cpp  EWrapper_prototypes.h  OrderCondition.cpp  PriceCondition.cpp  TimeCondition.cpp  executioncondition.cpp  framework.h
src/tws_gui/: CWindow.cpp  CWindow.h  SuperLabel.cpp  SuperLabel.h  ib-tracker.cpp  main-tester.cpp
(+176 files in other folders)
